backend/k8s/gateway/baryte-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: gateway-domain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: ghcr.io/egot3/supel/backend/gateway:latest
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "32Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: gateway-domain
spec:
  selector:
    app: gateway-service
  ports:
    - port: 51000
      targetPort: 51000
